--- a/templates/bon/index.html.twig
+++ b/templates/bon/index.html.twig
@@ -23,6 +23,7 @@
                 <td>
                     <a href="{{ path('bon_show', {'id': bon.id}) }}">show</a>
                     <a href="{{ path('bon_edit', {'id': bon.id}) }}">edit</a>
+                    <a href="{{ path('bon_pdf', {'id': bon.id}) }}">pdf</a>
                 </td>
             </tr>
         {% else %}
